metadata/force-app/main/default/objects/CustomName_rOfFw__c/CustomName_rOfFw__c.object-meta.xml
<CustomObject>
    <description>Description_AYuDk</description>
    <label>CustomLabel_yVXlF</label>
    <nameField>
        <label>CustomLabel_yVXlF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_yVXlFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>