metadata/force-app/main/default/objects/CustomName_rOfFw__c/fields/CustomField_byEAs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_byEAs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldftjIV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>